add review section

--- a/index.html
+++ b/index.html
@@ -343,182 +343,180 @@
 
 <!-- newsletter section ends  -->
 
-<!-- arrivals section starts -->
+<!-- arribals selection starts -->
 
 <section class="arrivals" id="arrivals">
-    <h1 class="heading"> <span>new arrivals</span></h1>
-    <div class="arrivals-slider">
-        <div class="wraper">
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book1.jpg" alt="Dark Psychology Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Dark Psychology</h3>
-                        <div class="price">$12.99 <span>$17.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book2.jpg" alt="Alice Feeney Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Alice Feeney</h3>
-                        <div class="price">$16.99 <span>$21.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book3.jpg" alt="Harry Potter Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Harry Potter</h3>
-                        <div class="price">$25.99 <span>$30.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book4.jpg" alt="Eloquent JavaScript Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Eloquent JavaScript</h3>
-                        <div class="price">$29.99 <span>$34.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book5.jpg" alt="HTML and CSS Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>HTML and CSS</h3>
-                        <div class="price">$17.99 <span>$22.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-        </div>
-    </div>
+  <h1 class="heading"><span>new arrivals</span></h1>
 
-    <div class="arrivals-slider">
-        <div class="wraper">
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book6.jpg" alt="Dreyer's English Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Dreyer's English</h3>
-                        <div class="price">$14.99 <span>$19.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book7.jpg" alt="Computer Studies Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Computer Studies</h3>
-                        <div class="price">$29.99 <span>$34.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book8.jpg" alt="Computer Science Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Computer Science</h3>
-                        <div class="price">$31.99 <span>$36.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book9.jpg" alt="Technology and Society Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>Technology and Society</h3>
-                        <div class="price">$28.99 <span>$33.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="swiper-slide box">
-                    <div class="image">
-                        <img src="Images/book10.jpg" alt="IT Tools and Application Book Cover">
-                    </div>
-                    <div class="content">
-                        <h3>IT Tools and Application</h3>
-                        <div class="price">$19.99 <span>$24.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </div>
-                 </a>
-        </div>
-    </div>
+  <div class="swiper arrivals-slider">
+    <div class="swiper-wrapper">
 
+      <!-- Book 1 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book1.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$14.99 <span>$17.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 2 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book2.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$13.99 <span>$15.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 3 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book3.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$13.99 <span>$17.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 4 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book4.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$11.99 <span>$17.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 5 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book5.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$13.99 <span>$19.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 6 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book6.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$10.99 <span>$14.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 7 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book7.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$12.99 <span>$17.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 8 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book8.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$11.99 <span>$15.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 9 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book9.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$13.99 <span>$18.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+      <!-- Book 10 -->
+      <a href="#" class="swiper-slide box">
+        <div class="image">
+          <img src="Images/book10.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3>new arrivals</h3>
+          <div class="price">$12.99 <span>$15.99</span></div>
+          <div class="stars">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </a>
+
+    </div>
+  </div>
 </section>
-<!-- arrivals section ends -->
+
+
+<!-- arrivals selection end -->
 
 
 
