add deal section

--- a/index.html
+++ b/index.html
@@ -518,6 +518,26 @@
 
 <!-- arrivals selection end -->
 
+<!-- deal section starts -->
+
+<section class="deal">
+    <div class="content">
+        <h3>deal of the day</h3>
+        <h1>upto 50% off</h1>
+        <p>Don't miss out on our exclusive deal of the day! Enjoy up to 50% off on a wide selection of books across various genres. Whether you're a fan of thrilling mysteries, heartwarming romances, or insightful non-fiction, we have something special for every reader. Hurry, this offer is valid for today only!</p>
+        <a href="#" class="btn">shop now</a>
+    </div>
+
+    <div class="image">
+        <img src="Images/WhatsApp Image 2025-08-31 at 23.56.59_4554276f.jpg" alt="">
+    </div>
+
+</section>
+
+
+<!-- deal section ends -->
+
+
 
 
 
