--- a/index.html
+++ b/index.html
@@ -540,6 +540,82 @@
 
 
 
+<!--  review section starts  -->   
+<section class="review" id="review">
+  <h1 class="heading"><span>Client's Review</span></h1>
+
+  <div class="swiper review-slider">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide box">
+        <img src="Images/pic1.jpg" alt="">
+        <h3>Emon Shah</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide box">
+        <img src="Images/pic2.jpg" alt="">
+        <h3>Afroja akhter Ema</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide box">
+        <img src="Images/pic3.jpg" alt="">
+        <h3>Mehedy Hasan</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide box">
+        <img src="Images/pic5.jpg" alt="">
+        <h3>Emily</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide box">
+        <img src="Images/pic6.jpg" alt="">
+        <h3>Mishu Rahman</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!--  review section end  --> 
+
+
+
+
 
 
 
