update blog section

--- a/index.html
+++ b/index.html
@@ -615,6 +615,52 @@
 
 
 
+<!-- blogs section starts -->
+<section class="blogs" id="blogs">
+  <h1 class="heading"><span>Our Blogs</span></h1>
+
+  <div class="blogs-container">
+
+    <div class="blog-box">
+      <div class="image">
+        <img src="Images/blog1.jpg" alt="">
+      </div>
+      <div class="content">
+        <a href="#" class="title">Sci-Fi Novels That Will Blow Your Mind</a>
+        <p>Science fiction (sci-fi) has the power to transport readers to futuristic worlds, alternate realities, and mind-bending universes. Whether you love space adventures, time travel, or exploring the limits of human imagination, these novels will captivate and challenge you.</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+
+    <div class="blog-box">
+      <div class="image">
+        <img src="Images/blogs.jpg" alt="">
+      </div>
+      <div class="content">
+        <a href="#" class="title">How to Build Your Personal Library at Home</a>
+        <p>Creating your personal library is more than just collecting books—it's about building a space that inspires learning, imagination, and relaxation. Whether you’re a casual reader or a book enthusiast, a home library can be a personal haven for knowledge and creativity.</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+
+    <div class="blog-box">
+      <div class="image">
+        <img src="Images/blog3.jpg" alt="">
+      </div>
+      <div class="content">
+        <a href="#" class="title">Essential Guides for Beginner Book Collectors</a>
+        <p>Collecting books can be a rewarding hobby, but starting out as a book collector can feel overwhelming. From identifying rare editions to properly storing your collection, there are a few key strategies every beginner should know to build a meaningful and lasting library.</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- blogs section ends -->
+
+
+
+
 
 
 
