Update blogs section

--- a/index.html
+++ b/index.html
@@ -654,6 +654,18 @@
       </div>
     </div>
 
+    <div class="blog-box">
+      <div class="image">
+        <img src="Images/blog4.jpg" alt="">
+      </div>
+      <div class="content">
+        <a href="#" class="title">My Personal Experience with Book Collecting as a Casual Reader</a>
+        <p>You may have started book collecting as well or perhaps you are just curious about the subject. Whatever your reason for being here, I’m more than happy to share my journey with you. I have collected books since secondary school, beginning with small picture books and gradually increasing my collection to various genres over the years. </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+    </div>
+
   </div>
 </section>
 <!-- blogs section ends -->
