--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="content">
                     <h3>Dark Psychology</h3>
                     <div class="price">$12.99 <span>$17.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -199,7 +199,7 @@
                 <div class="content">
                     <h3>Alice Feeney</h3>
                     <div class="price">$16.99 <span>$21.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -214,7 +214,7 @@
                 <div class="content">
                     <h3>Harry Potter</h3>
                     <div class="price">$25.99 <span>$30.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -229,7 +229,7 @@
                 <div class="content">
                     <h3>Eloquent Javascript</h3>
                     <div class="price">$29.99 <span>$34.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -244,7 +244,7 @@
                 <div class="content">
                     <h3>HTML and CSS</h3>
                     <div class="price">$17.99 <span>$22.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -259,7 +259,7 @@
                 <div class="content">
                     <h3>Dreyer's English</h3>
                     <div class="price">$14.99 <span>$19.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="cart-btn">add to cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -274,7 +274,7 @@
                 <div class="content">
                     <h3>Computer Studies</h3>
                     <div class="price">$29.99 <span>$34.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -289,7 +289,7 @@
                 <div class="content">
                     <h3>Computer Science</h3>
                     <div class="price">$31.99 <span>$36.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -304,7 +304,7 @@
                 <div class="content">
                     <h3>Technology and Society</h3>
                     <div class="price">$28.99 <span>$33.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -319,7 +319,7 @@
                 <div class="content">
                     <h3>IT Tools and Application</h3>
                     <div class="price">$19.99 <span>$24.99</span></div>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
 
