--- a/index.html
+++ b/index.html
@@ -512,6 +512,8 @@
       </a>
 
     </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
   </div>
 </section>
 
@@ -609,6 +611,9 @@
       </div>
 
     </div>
+    
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
   </div>
 </section>
 <!--  review section end  --> 
@@ -619,9 +624,11 @@
 <section class="blogs" id="blogs">
   <h1 class="heading"><span>Our Blogs</span></h1>
 
-  <div class="blogs-container">
+  <div class="swiper blogs-container">
 
-    <div class="blog-box">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide blog-box">
       <div class="image">
         <img src="Images/blog1.jpg" alt="">
       </div>
@@ -632,7 +639,7 @@
       </div>
     </div>
 
-    <div class="blog-box">
+    <div class="swiper-slide blog-box">
       <div class="image">
         <img src="Images/blogs.jpg" alt="">
       </div>
@@ -643,7 +650,7 @@
       </div>
     </div>
 
-    <div class="blog-box">
+    <div class="swiper-slide blog-box">
       <div class="image">
         <img src="Images/blog3.jpg" alt="">
       </div>
@@ -654,7 +661,7 @@
       </div>
     </div>
 
-    <div class="blog-box">
+    <div class="swiper-slide blog-box">
       <div class="image">
         <img src="Images/blog4.jpg" alt="">
       </div>
@@ -664,8 +671,9 @@
         <a href="#" class="btn">Read More</a>
       </div>
     </div>
-    </div>
-
+  </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
   </div>
 </section>
 <!-- blogs section ends -->
