--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <!-- Loading Animation -->
-    <div class="loading-screen" id="loading-screen">
-        <div class="loader">
-            <i class="fas fa-book-open"></i>
-            <p>Loading Book Store...</p>
-        </div>
-    </div>
 
 <!---header section--->
 <header class="header">
@@ -679,39 +672,71 @@
 <!-- blogs section ends -->
 
 
+<!-- footer section starts  -->
 
+<section class="footer">
+  <div class="box-container">
 
-
-
-
-
-
-    <!-- Quick View Modal -->
-    <div class="quick-view-modal" id="quick-view-modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div class="modal-body">
-                <div class="book-image">
-                    <img id="modal-book-image" src="" alt="">
-                </div>
-                <div class="book-details">
-                    <h2 id="modal-book-title"></h2>
-                    <div class="price" id="modal-book-price"></div>
-                    <div class="stars" id="modal-book-stars"></div>
-                    <p id="modal-book-description"></p>
-                    <div class="modal-actions">
-                        <button class="btn add-to-cart-modal">Add to Cart</button>
-                        <button class="btn wishlist-btn">Add to Wishlist</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="box">
+      <h3>Our locations</h3>
+      <a href="#"><i class="fas fa-map-marker-alt">Bangladesh</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt">India</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt">Pakistan</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt">Nepal</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt">Afganistan</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt">Japan</i></a>
     </div>
 
-    <!-- Back to Top Button -->
-    <button id="back-to-top" class="back-to-top">
-        <i class="fas fa-arrow-up"></i>
-    </button>
+    <div class="box">
+      <h3>Quick links</h3>
+      <a href="#"><i class="fas fa-arrow-right">Home</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Featured</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Arrivals</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Reviews</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Blogs</i></a>
+    </div>
+
+    <div class="box">
+      <h3>Extra links</h3>
+      <a href="#"><i class="fas fa-arrow-right">Account info</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Ordered items</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Privacy policy</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Payment method</i></a>
+      <a href="#"><i class="fas fa-arrow-right">Our services</i></a>
+    </div>
+
+    <div class="box">
+      <h3>Contact info</h3>
+      <a href="#"><i class="fas fa-phone">01518-955321</i></a>
+      <a href="#"><i class="fas fa-phone">01704-590269</i></a>
+      <a href="#"><i class="fas fa-phone">01842-528866</i></a>
+      <img src="Images/world_map.jpg" class="map" alt="">
+    </div>
+    
+  </div>
+
+  <div class="share">
+    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-twitter"></a>
+    <a href="#" class="fab fa-instagram"></a>
+    <a href="#" class="fab fa-linkedin"></a>
+  </div>
+
+  <div class="credit">Created by <span>Emon, Mehedi, Ema</span> | all rights reserved!</div>
+  
+</section>
+
+<!-- footer section ends  -->
+
+
+
+
+
+
+
+
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
