--- a/index.html
+++ b/index.html
@@ -568,12 +568,14 @@
 
       <div class="swiper-slide box">
         <img src="Images/pic3.jpg" alt="">
-        <h3>Mehedy Hasan</h3>
+        <h3>Mehedi Hasan</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
         <div class="stars">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
         </div>
       </div>
 
@@ -679,49 +681,49 @@
 
     <div class="box">
       <h3>Our locations</h3>
-      <a href="#"><i class="fas fa-map-marker-alt">Bangladesh</i></a>
-      <a href="#"><i class="fas fa-map-marker-alt">India</i></a>
-      <a href="#"><i class="fas fa-map-marker-alt">Pakistan</i></a>
-      <a href="#"><i class="fas fa-map-marker-alt">Nepal</i></a>
-      <a href="#"><i class="fas fa-map-marker-alt">Afganistan</i></a>
-      <a href="#"><i class="fas fa-map-marker-alt">Japan</i></a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> Bangladesh</a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> India</a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> Pakistan</a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> USA</a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> Canada</a>
+      <a href="#"><i class="fas fa-map-marker-alt"></i> Australia</a>
     </div>
 
     <div class="box">
       <h3>Quick links</h3>
-      <a href="#"><i class="fas fa-arrow-right">Home</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Featured</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Arrivals</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Reviews</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Blogs</i></a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Home</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Featured</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Arrivals</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Reviews</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Blogs</a>
     </div>
 
     <div class="box">
       <h3>Extra links</h3>
-      <a href="#"><i class="fas fa-arrow-right">Account info</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Ordered items</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Privacy policy</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Payment method</i></a>
-      <a href="#"><i class="fas fa-arrow-right">Our services</i></a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Account info</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Ordered items</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Privacy policy</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Payment method</a>
+      <a href="#"><i class="fas fa-arrow-right"></i> Our services</a>
     </div>
 
     <div class="box">
       <h3>Contact info</h3>
-      <a href="#"><i class="fas fa-phone">01518-955321</i></a>
-      <a href="#"><i class="fas fa-phone">01704-590269</i></a>
-      <a href="#"><i class="fas fa-phone">01842-528866</i></a>
+      <a href="#"><i class="fas fa-phone"></i> 01518-955321</a>
+      <a href="#"><i class="fas fa-phone"></i> 01704-590269</a>
+      <a href="#"><i class="fas fa-phone"></i> 01842-528866</a>
       <img src="Images/world_map.jpg" class="map" alt="">
     </div>
-    
+
   </div>
 
   <div class="share">
     <a href="#" class="fab fa-facebook-f"></a>
-    <a href="#" class="fab fa-facebook-f"></a>
-    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="" class="fab fa-facebook-messenger"></a>
     <a href="#" class="fab fa-twitter"></a>
     <a href="#" class="fab fa-instagram"></a>
     <a href="#" class="fab fa-linkedin"></a>
+    <a href="#" class="fab fa-pinterest"></a>
   </div>
 
   <div class="credit">Created by <span>Emon, Mehedi, Ema</span> | all rights reserved!</div>
