Add javascript of footer section

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
   </div>
 
   <div class="share">
-    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-facebook"></a>
     <a href="" class="fab fa-facebook-messenger"></a>
     <a href="#" class="fab fa-twitter"></a>
     <a href="#" class="fab fa-instagram"></a>
