--- a/index.html
+++ b/index.html
@@ -733,6 +733,13 @@
 <!-- footer section ends  -->
 
 
+<!-- loader  -->
+
+<div class="loader-container">
+  <img src="https://i.pinimg.com/originals/c3/42/01/c34201153d2aa51fa57ee2f7c11b4c3d.gif" alt="">
+</div>
+
+
 
 
 
