Added descriptive alt text for key images

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
 
         <div class="swiper books-slider">
             <div class="swiper-wrapper">
-                <a href="#" class="swiper-slide"><img src="Images/book1.jpg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="Images/book2.jpg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="Images/book3.jpg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="Images/book4.jpg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="Images/book5.jpg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="Images/book6.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="Images/book1.jpg" alt="Dark Psychology Book"></a>
+                <a href="#" class="swiper-slide"><img src="Images/book2.jpg" alt="Alice Feeney Book"></a>
+                <a href="#" class="swiper-slide"><img src="Images/book3.jpg" alt="Harry Potter Book"></a>
+                <a href="#" class="swiper-slide"><img src="Images/book4.jpg" alt="Eloquent JavaScript Book"></a>
+                <a href="#" class="swiper-slide"><img src="Images/book5.jpg" alt="HTML and CSS Book"></a>
+                <a href="#" class="swiper-slide"><img src="Images/book6.jpg" alt="Dreyer's English Book"></a>
             </div>
             
-            <img src="Images/stand.jpg" class="stand" alt="">
+            <img src="Images/stand.jpg" class="stand" alt="Book Stand">
 
             
         </div>
@@ -121,7 +121,7 @@
 
 <!-- icon section starts  -->
 
-<section class="icons-container">
+<section class="icons-container" id="features">
     <div class="icons">
         <i class="fas fa-plane"></i>
         <div class="content">
@@ -172,7 +172,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="Images/book1.jpg" alt="">
+                    <img src="Images/book1.jpg" alt="Dark Psychology Book Cover">
                 </div>
                 <div class="content">
                     <h3>Dark Psychology</h3>
@@ -252,7 +252,7 @@
                 <div class="content">
                     <h3>Dreyer's English</h3>
                     <div class="price">$14.99 <span>$19.99</span></div>
-                    <a href="#" class="cart-btn">add to cart</a>
+                    <a href="#" class="cart-btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -543,7 +543,7 @@
     <div class="swiper-wrapper">
 
       <div class="swiper-slide box">
-        <img src="Images/pic1.jpg" alt="">
+        <img src="Images/pic1.jpg" alt="Emon Shah Profile Picture">
         <h3>Emon Shah</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
         <div class="stars">
