Change store name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <header class="header" role="banner">
     <div class="header-1">
        <a href="#" class="logo" aria-label="Online Book Store - Home">
-           <i class="fas fa-book"></i> Online Book Store
+           <i class="fas fa-book"></i> BookHive EME
        </a>
 
        <form action="#" method="GET" class="search-form" role="search">
